test/runnable/rdmd_eval.d
// COMPILER: rdmd
// PERMUTE_ARGS:
// REQUIRED_ARGS: --eval=writeln(`eval_works`);
/*
TEST_OUTPUT:
---
eval_works
---
*/
void test() { }
